# rvasm

./: .gitignore  CMakeLists.txt  README.md  instruction_set_encoding.s  main.c  rvasm  rvasm.c
risc-v-asm/: CMakeLists.txt  InstructionEncoding.c  hex.c  rv32Encoding.c  utilities.c
risc-v-asm/include/: InstructionEncoding.h  hex.h  rv32Encoding.h  utilities.h
